fixing swagger documentation
